# terraform_aws_django

./: .gitignore  README.md  docker-compose.yaml
.github/workflows/: clean_dev_terraform.yaml  clean_prod_terraform.yaml  clean_stage_terraform.yaml  clean_terraform.yaml  terraform.yaml
Dockerfiles/: django.Dockerfile  nginx.Dockerfile
app/: manage.py  pyproject.toml
app/aws_db_engine/: base.py
app/scripts/: format.sh  lint.sh  run_server.sh  test.sh
app/terraform_aws_django/: asgi.py  settings.py  urls.py  wsgi.py
deploy/: requirements.txt  update-ecs.py
nginx/: nginx.conf
terraform/: .terraform.lock.hcl  00_tf_backend.tf  02_network.tf  03_securitygroups.tf  04_loadbalancer.tf  05_iam.tf  06_logs.tf  07_keypair.tf  08_ecs.tf  09_auto_scaling.tf  10_rds.tf  11_s3.tf  12_secret_manager.tf  13_route_53.tf  14_redis.tf  output.tf  variables.tf
terraform/templates/: django_app.json.tpl
terraform_cheap/: .terraform.lock.hcl  00_tf_backend.tf  01_provider.tf  02_network.tf  03_securitygroups.tf  04_loadbalancer.tf  05_iam.tf  08_ecs.tf  09_auto_scaling.tf  12_secret_manager.tf  13_route_53.tf  variables.tf
terraform_cheap/policies/: ecs-instance-role-policy.json
terraform_cheap/templates/: django_app.json.tpl
