[tool.poetry]
name = "terraform-aws-django"
version = "0.1.0"
description = ""
authors = ["Ninchuk Vladislav"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.7"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.5"
boto3 = "^1.26.84"
pillow = "^9.4.0"
django-storages = "^1.13.2"
django-redis = "^5.2.0"
redis = "^4.5.3"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pytest = "^7.2.2"
pytest-django = "^4.5.2"
pytest-cov = "^4.0.0"
autoflake = "^2.0.1"
pytest-black = "^0.3.12"
pytest-mock = "^3.10.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
flake8-black = "0.3.3"
flake8-bugbear = "^22.4.25"
flake8-coding = "^1.3.2"
flake8-comprehensions = "^3.10.0"
flake8-debugger = "4.1.2"
flake8-executable = "^2.1.1"
flake8-isort = "6.0.0"
flake8-logging-format = "0.9.0"
flake8-pie = "0.15.0"
flake8-pytest-style = "1.6.0"
flake8-quotes = "3.3.2"
flake8-simplify = "0.19.3"
flake8-pyproject = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.flake8]
max-line-length = 120
no-accept-encodings = true
inline-quotes = '"'
# Ignoring:
# E203: white space before ':'. Because it's not black compatible
# E501: Line too long. Because we use soft line limit B950
# W503: Line break occurred before a binary operator. Because black
# W505: Maximum doc-string length. Because it's not black compatible
# B008: Do not perform function calls in argument defaults. Because FastAPI
# G200: Logging exception. Because sometime its needed
# PIE781: PIE781: assign-and-return. Because it's too noisy
ignore = "E203,E501,W503,W505,B008,G200,PIE781,EXE002"
select = "C,E,F,G,I,P,S,W,Q,T,B,B950"

[tool.isort]